Fix overlap on ordered lists with margin

--- a/site/themes/getenvoy/static/css/main.css
+++ b/site/themes/getenvoy/static/css/main.css
@@ -357,7 +357,7 @@ form.micro.inline .icon::before{
 .body.single > ol > li {
 	display:block;
 	padding:0;
-	margin:0;
+	margin:20px 0px;
 	list-style: none;
 }
 
